# ocaml-binary

./: .ocamlformat  demo.ml  dune-project  ocaml-binary.opam
bench/: bench_applicative_monad.ml  bench_string_sub.ml
lib/: binary_applicative.ml  binary_buffer.ml  binary_functor.ml  binary_lwt.ml  binary_monad.ml  binary_monoid.ml  binary_reader.ml  binary_string.ml  binary_writer.ml  binary_writer.mli  dune
